--- a/views/partials/layout.ejs
+++ b/views/partials/layout.ejs
@@ -65,6 +65,7 @@
               <a href="/admin/milestones">Manage Milestones</a>
               <a href="/dashboard">Dashboard</a>
               <a href="/admin/surveys">View Surveys</a>
+              <a href="/admin/donations">View Donations</a>
             <% } else { %>
               <!-- Regular users see milestones -->
               <a href="/milestones">Milestones</a>
